# sa-navigator

./: AGENTS.md  README.md  docker-compose.yml  progress.md  response.json  trello_mc_clients_export.json
.next/: trace  trace-build
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  import_trello.py  pyproject.toml
backend/app/: config.py  database.py  deps.py  main.py  middleware.py  roles.py
backend/app/api/: __init__.py  api_keys.py  auth.py  opportunities.py
backend/app/models/: __init__.py  api_key.py  opportunity.py  opportunity_change_log.py  opportunity_update.py  refresh_token.py  user.py
backend/app/schemas/: api_key.py  auth.py  opportunity.py
backend/app/services/: api_key_service.py  auth_service.py
backend/migrations/: env.py
backend/migrations/versions/: add_api_keys_table.py
backend/scripts/: seed_users.py
backend/tests/: conftest.py  test_api_keys.py  test_auth.py  test_opportunities.py
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  providers.tsx
frontend/src/app/(dashboard)/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/layout/: DashboardHeader.tsx
frontend/src/components/opportunities/: OpportunityCard.tsx  OpportunityDialog.tsx  OpportunityForm.tsx  OpportunityTable.tsx
frontend/src/components/ui/: badge.tsx  card.tsx  dialog.tsx  table.tsx  textarea.tsx
frontend/src/lib/: api.ts  queries.ts
